--- a/docs/conventions/layouts.ipynb
+++ b/docs/conventions/layouts.ipynb
@@ -253,7 +253,7 @@
      "text": [
       "[\"/\"].dataset(name=\"Equal(Validator Equal has not yet been called or no message has been set!)\", compression=Equal(Validator Equal has not yet been called or no message has been set!))\n",
       "[\"/...\"].attr([\"Equal('comment')=Regex('^[^ 0-9].*')\"])\n",
-      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('__version__')=Equal('0.8rc1')\"])\n",
+      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('__version__')=Equal('0.9.0a0')\"])\n",
       "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('title')=Any(opt=True)\", \"Equal('user')=Any(opt=True)\"])\n",
       "GroupValidation(ExistIn('devices'))>\n"
      ]
@@ -586,42 +586,27 @@
        "    white-space: nowrap;\r\n",
        "}\r\n",
        "\r\n",
-       "\r\n",
-       ".h5tb-unit {\r\n",
-       "    width: 96px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: right;\r\n",
-       "    color: #555;\r\n",
-       "    font-style: italic;\r\n",
-       "}\r\n",
-       "\r\n",
        ".h5tb-attr-list {\r\n",
        "    list-style: none;\r\n",
-       "    background-color: #fff;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "    padding-bottom: 6px;\r\n",
-       "    color: #555;\r\n",
+       "    color: #6a6c73;\r\n",
        "}\r\n",
        "\r\n",
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
-       "    background-color: #fff;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-highlight {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "    cursor: pointer;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5538279200\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5538279200\">\n",
+       "                        <input id=\"group-ds--5436088100\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5436088100\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc1</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.9.0a0</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -741,7 +726,7 @@
        "[ValidationResult(\u001b[91mds validation \"Equal(Validator Equal has not yet been called or no message has been set!)\" failed for /\u001b[0m),\n",
        " ValidationResult(\u001b[91m\"/\" is missing required attributes: [\"Equal('comment')=Regex('^[^ 0-9].*')\"]\u001b[0m),\n",
        " ValidationResult(\u001b[91mds validation \"re:^[x-z]_coordinate\" failed for /\u001b[0m),\n",
-       " ValidationResult(\u001b[91m\"/\" is missing required attributes: [\"Equal('__version__')=Equal('0.8rc1')\"]\u001b[0m),\n",
+       " ValidationResult(\u001b[91m\"/\" is missing required attributes: [\"Equal('__version__')=Equal('0.9.0a0')\"]\u001b[0m),\n",
        " ValidationResult(\u001b[91m\"/\" is missing required attributes: [\"Equal('title')=Any(opt=True)\", \"Equal('user')=Any(opt=True)\"]\u001b[0m),\n",
        " ValidationResult(\u001b[91m\"devices\" does not exist in \"/\"\u001b[0m)]"
       ]
@@ -781,7 +766,7 @@
       "[\"/\"].dataset(name=\"Equal(Validator Equal has not yet been called or no message has been set!)\", compression=Equal(Validator Equal has not yet been called or no message has been set!))\n",
       "[\"/...\"].attr([\"Equal('comment')=Regex('^[^ 0-9].*')\"])\n",
       "[\"/\"].dataset(name=\"re:^[x-z]_coordinate\", ndim=Equal(Validator Equal has not yet been called or no message has been set!))\n",
-      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('__version__')=Equal('0.8rc1')\"])\n",
+      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('__version__')=Equal('0.9.0a0')\"])\n",
       "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('title')=Any(opt=True)\", \"Equal('user')=Any(opt=True)\"])\n",
       "GroupValidation(ExistIn('devices'))>\n"
      ]
@@ -1005,7 +990,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
