--- a/docs/conventions/standard_name_convention.ipynb
+++ b/docs/conventions/standard_name_convention.ipynb
@@ -117,8 +117,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_wind6743998400\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_wind6743998400\">\n",
+       "        <input id=\"group-x_wind5762191700\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_wind5762191700\">\n",
        "        x_wind</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : \"x\" indicates a vector component along the grid x-axis, positive with increasing x. Wind is defined as a two-dimensional (horizontal) air velocity vector, with no vertical component. (Vertical motion in the atmosphere has the standard name upward_air_velocity.).</li>      </il>\n",
@@ -447,8 +447,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_velocity6901174600\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6901174600\">\n",
+       "        <input id=\"group-x_velocity5924035700\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity5924035700\">\n",
        "        x_velocity</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -489,8 +489,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-derivative_of_x_velocity_wrt_x_coordinate6915942500\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-derivative_of_x_velocity_wrt_x_coordinate6915942500\">\n",
+       "        <input id=\"group-derivative_of_x_velocity_wrt_x_coordinate5938716400\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-derivative_of_x_velocity_wrt_x_coordinate5938716400\">\n",
        "        derivative_of_x_velocity_wrt_x_coordinate</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : 1/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Derivative of x_velocity with respect to x_coordinate. Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector. Coordinate refers to the spatial coordinate. Coordinate is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -521,8 +521,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-square_of_static_pressure6928502900\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-square_of_static_pressure6928502900\">\n",
+       "        <input id=\"group-square_of_static_pressure5953409400\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-square_of_static_pressure5953409400\">\n",
        "        square_of_static_pressure</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : Pa**2</li>           <li style=\"list-style-type: none; font-style: italic\">description : Square of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</li>      </il>\n",
@@ -553,8 +553,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-arithmetic_mean_of_static_pressure6942426400\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-arithmetic_mean_of_static_pressure6942426400\">\n",
+       "        <input id=\"group-arithmetic_mean_of_static_pressure5967643500\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-arithmetic_mean_of_static_pressure5967643500\">\n",
        "        arithmetic_mean_of_static_pressure</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : Pa</li>           <li style=\"list-style-type: none; font-style: italic\">description : Arithmetic mean of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</li>      </il>\n",
@@ -591,22 +591,34 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Convention \"h5rdmtoolbox-tutorial-convention\" filename: C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\cache\\10.5281_zenodo.8357399\n",
+      "creating directory for the convention\n",
+      "No special functions defined\n",
+      "Found 0 function(s) in C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\conventions\\h5rdmtoolbox_tutorial_convention\\h5rdmtoolbox_tutorial_convention.py\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "\u001b[1mConvention(\"standard name convention\")\u001b[0m\n",
        "contact: https://orcid.org/0000-0001-8729-0482\n",
        "  File.__init__():\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000001EA17F13AC0>):\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000001CBD2CD2100>):\n",
        "\t\tThe standard name table of the convention.\n",
        "  Group.create_dataset():\n",
-       "    * \u001b[1munits\u001b[0m:\n",
+       "    * \u001b[3mscale\u001b[0m (default=None):\n",
+       "\t\tScale factor for the dataset values.\n",
+       "    * \u001b[3moffset\u001b[0m (default=None):\n",
+       "\t\tThe offset of the dataset.\n",
+       "    * \u001b[3munits\u001b[0m (default=None):\n",
        "\t\tThe physical unit of the dataset. If dimensionless, the unit is ''.\n",
-       "    * \u001b[1mstandard_name\u001b[0m:\n",
+       "    * \u001b[3mstandard_name\u001b[0m (default=None):\n",
        "\t\tStandard name of the dataset. If not set, the long_name attribute must be given.\n",
-       "    * \u001b[1mlong_name\u001b[0m:\n",
+       "    * \u001b[3mlong_name\u001b[0m (default=None):\n",
        "\t\tAn comprehensive description of the dataset. If not set, the standard_name attribute must be given.\n",
-       "    * \u001b[3mreferencesdataset\u001b[0m (default=None):\n",
-       "\t\tWeb resources servering as references for the dataset.\n",
        "  Group.create_group(): (\u001b[3mNothing registered\u001b[0m)"
       ]
      },
@@ -616,7 +628,7 @@
     }
    ],
    "source": [
-    "zenodo_cv = h5tbx.conventions.from_zenodo('https://zenodo.org/record/8301535')\n",
+    "zenodo_cv = h5tbx.conventions.from_zenodo('https://zenodo.org/record/8357399')\n",
     "sn_cv = zenodo_cv.pop('contact', 'comment', 'references', 'data_type')\n",
     "sn_cv.name = 'standard name convention'\n",
     "sn_cv.register()\n",
@@ -714,8 +726,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_velocity7033832100\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity7033832100\">\n",
+       "        <input id=\"group-x_velocity6109104700\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6109104700\">\n",
        "        x_velocity</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -925,49 +937,42 @@
        "    white-space: nowrap;\r\n",
        "}\r\n",
        "\r\n",
-       "\r\n",
-       ".h5tb-unit {\r\n",
-       "    width: 96px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: right;\r\n",
-       "    color: #555;\r\n",
-       "    font-style: italic;\r\n",
-       "}\r\n",
-       "\r\n",
        ".h5tb-attr-list {\r\n",
        "    list-style: none;\r\n",
-       "    background-color: #fff;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "    padding-bottom: 6px;\r\n",
-       "    color: #555;\r\n",
+       "    color: #6a6c73;\r\n",
        "}\r\n",
        "\r\n",
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
-       "    background-color: #fff;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-highlight {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "    cursor: pointer;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--7067746600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--7067746600\">\n",
+       "                        <input id=\"group-ds--6144667600\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--6144667600\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0rc4</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)</li></li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.9.0a0</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)</li></li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-7081563600\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/u-7081566900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/u-7081566900\">u</label>\n",
+       "                <ul id=\"ds-1-/u-6146480400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/u-6146483000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/u-6146483000\">u</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : km/s</li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name : <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "    <li>\n",
+       "        <input id=\"group-x_velocity6147826900\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6147826900\">\n",
+       "        x_velocity</label>\n",
+       "        <ul class=\"h5tb-attr-list\">\n",
+       "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
+       "    </ul>\n",
+       "</ul></li><li style=\"list-style-type: none; font-style: italic\">units : km/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
@@ -1005,7 +1010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
