--- a/docs/howto/ht005.ipynb
+++ b/docs/howto/ht005.ipynb
@@ -26,12 +26,33 @@
    "execution_count": 2,
    "id": "d63db892-87e4-4f24-bfc8-7732cf3ff08b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Convention \"h5rdmtoolbox-tutorial-convention\" filename: C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\data\\tutorial_convention.yaml\n",
+      "creating directory for the convention\n",
+      "No special functions defined\n",
+      "Found 0 function(s) in C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\conventions\\h5rdmtoolbox_tutorial_convention\\h5rdmtoolbox_tutorial_convention.py\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "using(\"h5rdmtoolbox-tutorial-convention\")"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "yaml_filename = tutorial.get_standard_attribute_yaml_filename()\n",
     "\n",
     "cv = h5tbx.conventions.Convention.from_yaml(yaml_filename)\n",
-    "cv.use()"
+    "h5tbx.use(cv)"
    ]
   },
   {
@@ -54,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "dfbb4a76-72cc-43d0-81a5-2416f7805bc0",
    "metadata": {},
    "outputs": [
@@ -234,45 +255,27 @@
        "    white-space: nowrap;\r\n",
        "}\r\n",
        "\r\n",
-       "\r\n",
-       ".h5tb-unit {\r\n",
-       "    width: 96px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: right;\r\n",
-       "    color: #555;\r\n",
-       "    font-style: italic;\r\n",
-       "}\r\n",
-       "\r\n",
        ".h5tb-attr-list {\r\n",
        "    list-style: none;\r\n",
-       "    background-color: #fff;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "    padding-bottom: 6px;\r\n",
-       "    color: #555;\r\n",
+       "    color: #6a6c73;\r\n",
        "}\r\n",
        "\r\n",
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
-       "    background-color: #fff;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-highlight {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "    cursor: pointer;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--34374986700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--34374986700\">\n",
+       "                        <input id=\"group-ds--5189644000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5189644000\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc1</li><li style=\"list-style-type: none; font-style: italic\">contact : <a href=\"https://orcid.org/0000-0001-8729-0482\">\n",
-       "<img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />\n",
-       "https://orcid.org/0000-0001-8729-0482\n",
-       "</a></li><li style=\"list-style-type: none; font-style: italic\">data_type : experimental</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1)</li></li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.9.0a0</li><li style=\"list-style-type: none; font-style: italic\">contact : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">data_type : experimental</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1)</li></li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -319,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
