--- a/docs/howto/ht006.ipynb
+++ b/docs/howto/ht006.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "70300325-dd6a-4aa8-b9fb-a8220e37ab74",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "0adaef45-87fe-49ea-a958-6a7e42a1225f",
    "metadata": {},
    "outputs": [
@@ -44,6 +44,8 @@
     }
    ],
    "source": [
+    "h5tbx.use('h5tbx')\n",
+    "\n",
     "with h5tbx.File() as h5:\n",
     "    h5.create_dataset('torque', data=[1,2, 3], units='Nm')\n",
     "    t = h5['torque'][:]\n",
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "f8adf390-7f76-4139-b8c2-7e9ea3d9502f",
    "metadata": {},
    "outputs": [],
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "16204386-bb4e-4bec-8fca-cfd33a64903d",
    "metadata": {},
    "outputs": [
@@ -451,7 +453,7 @@
        "Dimensions without coordinates: dim_0\n",
        "Attributes:\n",
        "    units:       N*m\n",
-       "    PROVENANCE:  {&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.8.2&#x27;}, &#x27;gro...</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'torque'</div><ul class='xr-dim-list'><li><span>dim_0</span>: 3</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-7e6cc0c0-f75a-4d92-aefa-993a2ee5f129' class='xr-array-in' type='checkbox' ><label for='section-7e6cc0c0-f75a-4d92-aefa-993a2ee5f129' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>1 2 3</span></div><div class='xr-array-data'><pre>array([1, 2, 3])</pre></div></div></li><li class='xr-section-item'><input id='section-866171c9-e99f-4874-88b5-3c5b77c3b1b0' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-866171c9-e99f-4874-88b5-3c5b77c3b1b0' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-50668d1f-25c6-412b-b1ef-79b81f9da98c' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-50668d1f-25c6-412b-b1ef-79b81f9da98c' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-251954e3-deeb-43b9-a570-33c0117d9cfd' class='xr-section-summary-in' type='checkbox'  checked><label for='section-251954e3-deeb-43b9-a570-33c0117d9cfd' class='xr-section-summary' >Attributes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>N*m</dd><dt><span>PROVENANCE :</span></dt><dd>{&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.8.2&#x27;}, &#x27;group&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.8.2&#x27;}, &#x27;filename&#x27;: &#x27;C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp_1\\\\tmp3.hdf&#x27;}}</dd></dl></div></li></ul></div></div>"
+       "    PROVENANCE:  {&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.9.0a0&#x27;}, &#x27;g...</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'torque'</div><ul class='xr-dim-list'><li><span>dim_0</span>: 3</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-fd4ca0f1-b003-48fc-b69f-61c9e284cac9' class='xr-array-in' type='checkbox' ><label for='section-fd4ca0f1-b003-48fc-b69f-61c9e284cac9' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>1 2 3</span></div><div class='xr-array-data'><pre>array([1, 2, 3])</pre></div></div></li><li class='xr-section-item'><input id='section-4ea617ac-2f03-494a-926d-5ff7ecb790ef' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-4ea617ac-2f03-494a-926d-5ff7ecb790ef' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-59634ce0-0308-43f6-b194-8f44b67cbb14' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-59634ce0-0308-43f6-b194-8f44b67cbb14' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-f01af1bc-0e62-4c92-895f-f89a07d46b57' class='xr-section-summary-in' type='checkbox'  checked><label for='section-f01af1bc-0e62-4c92-895f-f89a07d46b57' class='xr-section-summary' >Attributes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>N*m</dd><dt><span>PROVENANCE :</span></dt><dd>{&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.9.0a0&#x27;}, &#x27;group&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.9.0a0&#x27;}, &#x27;filename&#x27;: &#x27;C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp_7\\\\tmp2.hdf&#x27;}}</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'torque' (dim_0: 3)>\n",
@@ -459,10 +461,10 @@
        "Dimensions without coordinates: dim_0\n",
        "Attributes:\n",
        "    units:       N*m\n",
-       "    PROVENANCE:  {'HDF': {'root': {'__h5rdmtoolbox_version__': '0.8.2'}, 'gro..."
+       "    PROVENANCE:  {'HDF': {'root': {'__h5rdmtoolbox_version__': '0.9.0a0'}, 'g..."
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "7068224a-2d51-4883-a42b-2b35e92aeebf",
    "metadata": {
     "scrolled": true
@@ -849,17 +851,17 @@
        "[kg·m²/s²] 1.0 2.0 3.0\n",
        "Dimensions without coordinates: dim_0\n",
        "Attributes:\n",
-       "    PROVENANCE:  {&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.8.2&#x27;}, &#x27;gro...</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'torque'</div><ul class='xr-dim-list'><li><span>dim_0</span>: 3</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-0ddab798-bfea-476a-ba04-10f977bec223' class='xr-array-in' type='checkbox' ><label for='section-0ddab798-bfea-476a-ba04-10f977bec223' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>[kg·m²/s²] 1.0 2.0 3.0</span></div><div class='xr-array-data'><table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[1.0 2.0 3.0]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>kg m<sup>2</sup>/s<sup>2</sup></td></tr></tbody></table></div></div></li><li class='xr-section-item'><input id='section-e2081043-be23-41d5-88b6-138487b948c2' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-e2081043-be23-41d5-88b6-138487b948c2' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-74ad13bd-cb97-4e9e-b621-c31ad9e0caf7' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-74ad13bd-cb97-4e9e-b621-c31ad9e0caf7' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-c841bf33-7f77-4d83-849b-55d5d8151b8b' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c841bf33-7f77-4d83-849b-55d5d8151b8b' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>PROVENANCE :</span></dt><dd>{&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.8.2&#x27;}, &#x27;group&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.8.2&#x27;}, &#x27;filename&#x27;: &#x27;C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp_1\\\\tmp3.hdf&#x27;}}</dd></dl></div></li></ul></div></div>"
+       "    PROVENANCE:  {&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.9.0a0&#x27;}, &#x27;g...</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'torque'</div><ul class='xr-dim-list'><li><span>dim_0</span>: 3</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-2c383b47-a6db-4250-a602-08e4fe1a8135' class='xr-array-in' type='checkbox' ><label for='section-2c383b47-a6db-4250-a602-08e4fe1a8135' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>[kg·m²/s²] 1.0 2.0 3.0</span></div><div class='xr-array-data'><table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[1.0 2.0 3.0]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>kg m<sup>2</sup>/s<sup>2</sup></td></tr></tbody></table></div></div></li><li class='xr-section-item'><input id='section-730164ac-a0b8-46ec-9785-fef516ad2ab8' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-730164ac-a0b8-46ec-9785-fef516ad2ab8' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-78e25f99-2854-42d3-a8c5-48079c2c930a' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-78e25f99-2854-42d3-a8c5-48079c2c930a' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-c8b7e461-1c98-4dfd-ae2f-c8574bd97721' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c8b7e461-1c98-4dfd-ae2f-c8574bd97721' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>PROVENANCE :</span></dt><dd>{&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.9.0a0&#x27;}, &#x27;group&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.9.0a0&#x27;}, &#x27;filename&#x27;: &#x27;C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp_7\\\\tmp2.hdf&#x27;}}</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'torque' (dim_0: 3)>\n",
        "[kg·m²/s²] 1.0 2.0 3.0\n",
        "Dimensions without coordinates: dim_0\n",
        "Attributes:\n",
-       "    PROVENANCE:  {'HDF': {'root': {'__h5rdmtoolbox_version__': '0.8.2'}, 'gro..."
+       "    PROVENANCE:  {'HDF': {'root': {'__h5rdmtoolbox_version__': '0.9.0a0'}, 'g..."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,6 +875,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c6375ba3-2a49-4eae-9733-8dd6cb9d3bae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71aafc91-4e6b-420a-a118-caff41acea4f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -894,7 +904,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
