--- a/docs/conventions/standard_attributes_and_conventions.ipynb
+++ b/docs/conventions/standard_attributes_and_conventions.ipynb
@@ -7,35 +7,13 @@
    "source": [
     "# Introduction to Conventions\n",
     "\n",
-    "The standardization of attributes is important in order to reliable find specific datasets in a file. Typos and attribute naming based on personal preferences must be avoided. Even if humans may still be able to understand such data, especially automatic exploration and processing of such data will be impossible.\n",
+    "Adhering to **metadata standards** is essential to achieve **findability** and efficient **re-usability** of data. Typos and attribute naming based on personal preferences must be avoided. Even if humans may still be able to understand such data, especially automatic exploration and processing of such data will be impossible.\n",
     "\n",
-    "The toolbox provides as solution based on standardized HDF5 attributes explained in this chapter"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dfd4ad67-62a4-44e2-be29-d50f8ff09310",
-   "metadata": {},
-   "source": [
-    "<!-- \n",
+    "The `h5RDMtoolbox` solves this by introducing the **conventions**. A convention is a selection of **standard_attributes** which clearly define how metadata needs to be provided and for which HDF5 objects.\n",
     "\n",
-    "The `h5RDmtoolbox` lets you specify rules for those \"special attributes\". We will call them `standard attributes` and a collection of it a `convention` (More on this [here](conventions.ipynb)).\n",
+    "The definition is flexible and can easily be done by the user through YAML files.\n",
     "\n",
-    "<!-- If an attribute is addressed by the user, e.g. the attribute `units`, and a standard attribute implementation exists for this name, then the value is processed by the respective rule and the attribute is set or an error is raised in case of a invalid input.\n",
-    "\n",
-    "Standard attributes can be made required **during dataset creation,** for instance. This enforces users to pass certain meta information and validates it at the same time. Consequently, data becomes re-usable and explorable.\n",
-    "\n",
-    "Additionally, so-called [layouts](./layouts.ipynb) can be defined, too. They are used to specify the content of an HDF5 file after it has been written. This concept applies best during file exchange, as the layout validates if a file is complete and meets the expectation of the project or collaborative user. -->\n",
-    "\n",
-    "<!-- \n",
-    "## Concept\n",
-    "The figure below illustrates the general concept. Standard attributes are defined by the user and added to a convention. A registered convention is activated by calling `.use(<name of convention>)`. By doing so, the signature of the methods `create_dataset`, `create_group` and `__init__` are modified according to the generated standard attributes. Moreover, the docstring will be updated, too, as we will see later.\n",
-    "\n",
-    "\n",
-    "<img src=concept_of_std_attrs.png width=800px>\n",
-    "\n",
-    "\n",
-    "Let's see how this is done in practice: -->"
+    "The following walks you through the concept in detail."
    ]
   },
   {
@@ -52,14 +30,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9569850d-a4b1-47d7-b19e-59d2e336ac69",
+   "id": "13410f52-f2f2-4e6d-933b-9b1aa8361771",
    "metadata": {},
    "source": [
-    "## Definition of Standard Attributes in a Convention (YAML file)\n",
+    "## The convention YAML file\n",
     "\n",
-    "Standard attributes are defined in YAML files and can be read by the class `Convention`. Each entry of the YAML file corresponds to an object of class `StandardAttribute`.\n",
+    "A convention is defined in a YAML file. The following shows how one such YAML file could look like. In this example, **two** standard attributes are defined:\n",
+    "1. `contact_id`: The ID of a person. A string is required. This can be seen by the validator `$str`\n",
+    "2. `data_type`: The source of data. This standard attribute has a special validator, called `$dataSourceTypes`, which is defined in the same file.\n",
     "\n",
-    "An example of a convention defined in a YAML file is shown below. It first contains some lines of general information (name, contact, etc) and then is followed by definitions of standard attributes (in this case one, it is called \"data_type\")"
+    "Lessons to take:\n",
+    "- A YAMl file starts with general information about the convention, indicated by double underscores.\n",
+    "- Standard attributes and special validators are both defined in the same file."
    ]
   },
   {
@@ -74,13 +56,27 @@
     "__institution__: https://orcid.org/members/001G000001e5aUTIAY\n",
     "__contact__: https://orcid.org/0000-0001-8729-0482\n",
     "\n",
+    "contact_id:\n",
+    "  description: ID of a person to contact for questions.\n",
+    "  target_method: __init__\n",
+    "  validator: $str\n",
+    "\n",
+    "$dataSourceTypes:\n",
+    "  - numerical\n",
+    "  - experimental\n",
+    "\n",
     "data_type:\n",
     "  description: 'Type of data in file. Can be numerical or experimental'\n",
     "  target_method: __init__\n",
-    "  validator:\n",
-    "    $in:\n",
-    "    - experimental\n",
-    "    - numerical"
+    "  validator: $dataSourceTypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2b37652-d174-4cd8-8104-3f89f498a52a",
+   "metadata": {},
+   "source": [
+    "## Reading a Convention"
    ]
   },
   {
@@ -88,7 +84,7 @@
    "id": "5aac95f3-c228-4ac3-877b-69dc28d84e9f",
    "metadata": {},
    "source": [
-    "Let's read this file into the class `Convention`:"
+    "Let's read the above example file into the class `Convention`:"
    ]
   },
   {
@@ -98,12 +94,24 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Convention \"h5rdmtoolbox-tuturial-convention\" filename: example_convention.yaml\n",
+      "creating directory for the convention\n",
+      "No special functions defined\n",
+      "Found 0 function(s) in C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\conventions\\h5rdmtoolbox_tuturial_convention\\h5rdmtoolbox_tuturial_convention.py\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "\u001b[1mConvention(\"h5rdmtoolbox-tuturial-convention\")\u001b[0m\n",
        "contact: https://orcid.org/0000-0001-8729-0482\n",
        "  File.__init__():\n",
-       "    * \u001b[1mdata_type\u001b[0m:\n",
+       "    * \u001b[3mcontact_id\u001b[0m (default=None):\n",
+       "\t\tID of a person to contact for questions.\n",
+       "    * \u001b[3mdata_type\u001b[0m (default=None):\n",
        "\t\tType of data in file. Can be numerical or experimental."
       ]
      },
@@ -159,15 +167,7 @@
    "execution_count": 4,
    "id": "bc760582-760d-45dc-ae88-8346d3cfb387",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The standard attribute \"data_type\" is required but not provided.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    with h5tbx.File() as h5:\n",
@@ -194,7 +194,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Setting \"observational\" for standard attribute \"data_type\" failed. Original error: The value \"observational\" is not in ['experimental', 'numerical']. Expecting one of these: ['experimental', 'numerical']\n"
+      "Setting \"observational\" for standard attribute \"data_type\" failed. Original error: 1 validation error for dataSourceTypes_validator\n",
+      "value\n",
+      "  Input should be 'numerical' or 'experimental' [type=enum, input_value='observational', input_type=str]\n"
      ]
     }
    ],
@@ -411,12 +413,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5191887300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5191887300\">\n",
+       "                        <input id=\"group-ds--5640062600\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5640062600\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.3</li><li style=\"list-style-type: none; font-style: italic\">data_type : numerical</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.9.0a0</li><li style=\"list-style-type: none; font-style: italic\">data_type : numerical</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -494,6 +496,8 @@
        "\u001b[1mConvention(\"h5rdmtoolbox-tuturial-convention\")\u001b[0m\n",
        "contact: https://orcid.org/0000-0001-8729-0482\n",
        "  File.__init__():\n",
+       "    * \u001b[3mcontact_id\u001b[0m (default=None):\n",
+       "\t\tID of a person to contact for questions.\n",
        "    * \u001b[3mdata_type\u001b[0m (default=None):\n",
        "\t\tType of data in file. Can be numerical or experimental."
       ]
@@ -705,12 +709,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5255286600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5255286600\">\n",
+       "                        <input id=\"group-ds--5735329900\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5735329900\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.3</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.9.0a0</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -740,7 +744,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Setting \"observational\" for standard attribute \"data_type\" failed. Original error: The value \"observational\" is not in ['experimental', 'numerical']. Expecting one of these: ['experimental', 'numerical']\n"
+      "Setting \"observational\" for standard attribute \"data_type\" failed. Original error: 1 validation error for dataSourceTypes_validator\n",
+      "value\n",
+      "  Input should be 'numerical' or 'experimental' [type=enum, input_value='observational', input_type=str]\n"
      ]
     }
    ],
@@ -765,41 +771,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d406094-d12d-4069-8e06-28b8398cbd09",
-   "metadata": {},
-   "source": [
-    "## Designing Standard Attributes\n",
-    "\n",
-    "The above standard attribute used the `validator` called `$in` to compare the input against a reference list defined in the YAML file. There are more validators to choose from:\n",
-    "\n",
-    "### Validators\n",
-    "\n",
-    "Here is a list of available validators. An advanced introduction into details can be found in a [separate chapter](introduction_to_validators.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "b37888a9-c963-420a-b40b-45495212721b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['$none', '$datetime', '$type', '$in', '$orcid', '$quantity', '$offset', '$units', '$ref', '$url', '$bibtex', '$minlength', '$maxlength', '$regex', '$standard_name', '$standard_name_table'])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "h5tbx.conventions.get_validator().keys()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "14aed23f-cca2-47c5-a02d-a9afd8fe63be",
    "metadata": {},
    "source": [
@@ -812,12 +783,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "0641aa3c-152f-4f78-81b3-c6ddf4e9e531",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Convention \"h5rdmtoolbox-tutorial-convention\" filename: C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\cache\\10.5281_zenodo.8357399\n",
+      "creating directory for the convention\n",
+      "No special functions defined\n",
+      "Found 0 function(s) in C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\conventions\\h5rdmtoolbox_tutorial_convention\\h5rdmtoolbox_tutorial_convention.py\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -828,37 +809,41 @@
        "\t\tType of data in file. Can be numerical, analytical or experimental.\n",
        "    * \u001b[1mcontact\u001b[0m:\n",
        "\t\tContact or responsible person for the full file. Contact is represented by an ORCID.\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x0000026C955D23D0>):\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x0000027DD6400310>):\n",
        "\t\tThe standard name table of the convention.\n",
        "    * \u001b[3mcomment\u001b[0m (default=None):\n",
        "\t\tComment describes the file content in more detail.\n",
        "    * \u001b[3mreferences\u001b[0m (default=None):\n",
-       "\t\tWeb resources servering as references for the full file.\n",
+       "\t\tWeb resources serving as references for the full file.\n",
        "  Group.create_dataset():\n",
-       "    * \u001b[1munits\u001b[0m:\n",
+       "    * \u001b[3mscale\u001b[0m (default=None):\n",
+       "\t\tScale factor for the dataset values.\n",
+       "    * \u001b[3moffset\u001b[0m (default=None):\n",
+       "\t\tThe offset of the dataset.\n",
+       "    * \u001b[3munits\u001b[0m (default=None):\n",
        "\t\tThe physical unit of the dataset. If dimensionless, the unit is ''.\n",
-       "    * \u001b[1mstandard_name\u001b[0m:\n",
+       "    * \u001b[3mstandard_name\u001b[0m (default=None):\n",
        "\t\tStandard name of the dataset. If not set, the long_name attribute must be given.\n",
-       "    * \u001b[1mlong_name\u001b[0m:\n",
+       "    * \u001b[3mlong_name\u001b[0m (default=None):\n",
        "\t\tAn comprehensive description of the dataset. If not set, the standard_name attribute must be given.\n",
        "    * \u001b[3mcomment\u001b[0m (default=None):\n",
        "\t\tComment describes the dataset in more detail.\n",
-       "    * \u001b[3mreferencesdataset\u001b[0m (default=None):\n",
-       "\t\tWeb resources servering as references for the dataset.\n",
+       "    * \u001b[3mreferences\u001b[0m (default=None):\n",
+       "\t\tWeb resources serving as references for the dataset.\n",
        "  Group.create_group():\n",
        "    * \u001b[3mcomment\u001b[0m (default=None):\n",
        "\t\tComment describes the group content in more detail.\n",
        "    * \u001b[3mreferences\u001b[0m (default=None):\n",
-       "\t\tWeb resources servering as references for the group."
+       "\t\tWeb resources serving as references for the group."
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cv = h5tbx.conventions.from_zenodo(doi=8301535)\n",
+    "cv = h5tbx.conventions.from_zenodo(doi='https://zenodo.org/record/8357399')\n",
     "cv"
    ]
   },
@@ -874,17 +859,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "bff929ab-d133-48bd-8c16-b7bd3080a426",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<StandardAttribute[positional](\"standard_name\"): \"Standard name of the dataset. If not set, the long_name attribute must be given.\">"
+       "<StandardAttribute [keyword](\"standard_name\"): default_value=\"None\" | \"Standard name of the dataset. If not set, the long_name attribute must be given.\">"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "7f2295ae-7b1f-431f-8168-cf340b80adc2",
    "metadata": {},
    "outputs": [
@@ -954,29 +939,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a0b03b0c-8d48-46d3-8c0e-98d5dc758650",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "using(\"h5py\")"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "h5tbx.use(None)  # fall back to the default convention"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a7cdc750-6857-421c-8a35-b1e9ea6ca0aa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20fae79f-255b-46cc-aef0-e644bc96caec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -995,7 +975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
